# spaceshooter_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
docs/: build_workflow.md  linux.md  macos.md  setup_unix.md  setup_windows.md
scripts/: lint.sh  linux_build.sh  test.sh  win_build.bat
src/: application.cpp  draft.cpp  main.cpp  renderer.cpp  renderer_mediator.cpp  scene.cpp  sprite.cpp  world.cpp  world_object.cpp
src/engine/: CMakeLists.txt  __engine.h  application.cpp  application.h  assets_loader.cpp  assets_loader.h  keyboard.cpp  keyboard.h  logger.cpp  logger.h  mouse_keyboard.cpp  mouse_keyboard.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  sprite.cpp  sprite.h  sprite_animated.cpp  sprite_animated.h  sprite_animation.cpp  sprite_animation.h  text.cpp  text.h  texture.cpp  texture.h  view.cpp  view.h  world_object.cpp  world_object.h
src/game/: asteroid.cpp  asteroids_view.cpp  game_scene.cpp  math.cpp  menu_scene.cpp  missiles_view.cpp  space_controller.cpp  spaceship.cpp  spaceship_aim_laser.cpp  spaceship_engine_fire.cpp  spaceship_missile.cpp  spaceship_view.cpp
src/game/misc/: math.hpp
src/game/scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp
src/game/world_objects/asteroids/: asteroid.cpp  asteroid.hpp  asteroids_view.cpp  asteroids_view.hpp
src/game/world_objects/spaceship/: missiles_view.cpp  missiles_view.hpp  spaceship_aim_laser.cpp  spaceship_aim_laser.hpp  spaceship_missile.cpp  spaceship_missile.hpp  spaceship_view.cpp  spaceship_view.hpp
tests/: math_test.cpp
